Updates v3.0.0
- Adds enaUncertainty
- Fixes asym warnings
- Fixes pack
- Reorganizes models
- Fixes cfre living vector
- Fixes enaAscendency
- Adds more model info
	
Known Bugs
- Currently none.