@@ -6,6 +6,9 @@ Updates v3.0.0
 - Fixes cfre living vector
 - Fixes enaAscendency
 - Adds more model info
+- Adds steady state check to enaTroAgg
+- Adds meanTrophicLevel function
+- removes convergence check from enaUtility and enaMTI
 	
 Known Bugs
 - Currently none.
